--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js --ignore 'src/db/db.json'",
+    "dev": "nodemon src/index.js",
     "test": "jest tests"
   },
   "devDependencies": {
@@ -22,5 +22,10 @@
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
     "nanoid": "^2.1.3"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "src/db/db.json"
+    ]
   }
 }
